[package]
name = "common"
version = "0.1.0"
authors = ["Anonymous"]
description = "Rooster parachain KOKOKOKOKOKOKOKOKOKO"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
serde = { version = "1.0.160", features = ["derive"], optional = true }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
]
